--- a/composer.json
+++ b/composer.json
@@ -18,14 +18,13 @@
         "sensio/distribution-bundle": "~4.0",
         "sensio/framework-extra-bundle": "~3.0,>=3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
-        "twig/extensions": "1.0.*",
+        "twig/extensions": "^1.3",
         "sensio/generator-bundle": "2.3.*",
         "jms/security-extra-bundle": "1.5.*",
         "jms/di-extra-bundle": "1.4.*",
         "kriswallsmith/assetic": "1.1.*@dev",
         "dms/dms-filter-bundle": "dev-master",
         "avalanche123/imagine-bundle": "dev-master",
-        "genemu/form-bundle": "2.2.*",
 		"sonata-project/intl-bundle": "dev-master",
 		"sonata-project/cache-bundle": "dev-master",
         "knplabs/knp-menu-bundle": "2.0.*",
