--- a/src/Tools/Bundle/MigrationBundle/Resources/config/routing.yml
+++ b/src/Tools/Bundle/MigrationBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
 tools_migration_homepage:
-    pattern:  /hello/{name}
+    path:  /hello/{name}
     defaults: { _controller: ToolsMigrationBundle:Default:index }
