--- a/web/.htaccess
+++ b/web/.htaccess
@@ -6,7 +6,7 @@
     RewriteRule ^(.*)$ http://www.aml87.fr/$1 [L,R=301]
 
     RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^(.*)$ app.php [QSA,L]
+    RewriteRule ^(.*)$ app_dev.php [QSA,L]
 </IfModule>
 
 # ##############################################################################
@@ -76,6 +76,12 @@
 
 <IfModule mod_headers.c>
     Header set X-Content-Type-Options "nosniff"
+
+    Header set X-Frame-Options SAMEORIGIN
+
+    <FilesMatch "\.(jpg|JPG|jpeg|png|gif|ico)$">
+        Header unset X-Frame-Options
+    </FilesMatch>
 </IfModule>
 
 # ------------------------------------------------------------------------------
@@ -125,4 +131,18 @@ FileETag MTime Size
   # Web feeds
     ExpiresByType application/atom+xml                  "access plus 1 hour"
     ExpiresByType application/rss+xml                   "access plus 1 hour"
+</IfModule>
+
+<IfModule mod_deflate.c>
+
+    ############################################
+    ## enable apache served files compression
+    ## http://developer.yahoo.com/performance/rules.html#gzip
+
+    BrowserMatch ^Mozilla/4  gzip-only-text/html
+    BrowserMatch ^Mozilla/4\.0[678] no-gzip
+    BrowserMatch \bMSIE !no-gzip  !gzip-only-text/html
+    BrowserMatch \bMSI[E] !no-gzip  !gzip-only-text/html
+    Header append Vary User-Agent  env=!dont-vary
+    AddOutputFilterByType DEFLATE text/css  application/x-javascript text/x-component text/html text/richtext image/svg+xml  text/plain text/xsd text/xsl text/xml image/x-icon
 </IfModule>
