--- a/composer.json
+++ b/composer.json
@@ -1,67 +1,82 @@
 {
-    "name": "aureliengiry/aml87",
-    "description": "",
-    "minimum-stability": "dev",
-    "autoload": {
-        "psr-0": { "": "src/" },
-        "google": ["vendor/google/apiclient/src"]
+  "name": "aureliengiry/aml87",
+  "license": "proprietary",
+  "type": "project",
+  "description": "AML87 Website",
+  "minimum-stability": "dev",
+  "autoload": {
+    "psr-4": {
+      "": "src/"
     },
-    "require": {
-        "php": ">=5.3.8",
-        "symfony/symfony": "2.7.*",
-        "doctrine/orm": "~2.2,>=2.2.3,<2.5",
-        "doctrine/dbal": "<2.5",
-        "doctrine/doctrine-bundle": "~1.4",
-        "symfony/assetic-bundle": "~2.3",
-        "symfony/swiftmailer-bundle": "~2.3",
-        "symfony/monolog-bundle": "~2.4",
-        "sensio/distribution-bundle": "~4.0",
-        "sensio/framework-extra-bundle": "~3.0,>=3.0.2",
-        "incenteev/composer-parameter-handler": "~2.0",
-        "twig/extensions": "^1.3",
-        "sensio/generator-bundle": "2.3.*",
-        "jms/security-extra-bundle": "1.5.*",
-        "jms/di-extra-bundle": "1.4.*",
-        "kriswallsmith/assetic": "1.1.*@dev",
-        "dms/dms-filter-bundle": "dev-master",
-        "avalanche123/imagine-bundle": "dev-master",
-		"sonata-project/intl-bundle": "dev-master",
-		"sonata-project/cache-bundle": "dev-master",
-        "knplabs/knp-menu-bundle": "2.0.*",
-        "sonata-project/exporter": "1.*",
-        "sonata-project/block-bundle": "dev-master",
-        "sonata-project/doctrine-orm-admin-bundle":"dev-master",
-        "sonata-project/admin-bundle":"dev-master",
-        "sonata-project/core-bundle":"dev-master",
-        "friendsofsymfony/user-bundle": "~2.0@dev",
-        "google/apiclient": "1.1.*@dev"
-    },
-    "scripts": {
-        "post-install-cmd": [
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
-		    "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
-		    "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
-		    "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile"
-        ],
-        "post-update-cmd": [
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
-			"Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
-			"Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
-			"Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile"
-        ]
-    },
-	"repositories": [
-	    {
-	        "type": "composer",
-	        "url": "http://packages.zendframework.com/"
-	    }
-	],
-    "config": {
-        "bin-dir": "bin"
-    },
-    "extra": {
-        "symfony-app-dir": "app",
-        "symfony-web-dir": "web",
-        "symfony-assets-install":"symlink"
+    "classmap": [
+      "vendor/google/apiclient/src"
+    ]
+  },
+  "require": {
+    "php": ">=5.3.9",
+    "symfony/symfony": "2.7.*",
+    "doctrine/orm": "^2.4.8",
+    "doctrine/dbal": "<2.5",
+    "doctrine/doctrine-bundle": "~1.4",
+    "symfony/assetic-bundle": "~2.3",
+    "symfony/swiftmailer-bundle": "~2.3",
+    "symfony/monolog-bundle": "~2.4",
+    "sensio/distribution-bundle": "~4.0",
+    "sensio/framework-extra-bundle": "^3.0.2",
+    "incenteev/composer-parameter-handler": "~2.0",
+    "twig/extensions": "^1.3",
+    "jms/security-extra-bundle": "1.5.*",
+    "jms/di-extra-bundle": "1.4.*",
+    "kriswallsmith/assetic": "1.1.*@dev",
+    "dms/dms-filter-bundle": "dev-master",
+    "avalanche123/imagine-bundle": "dev-master",
+    "sonata-project/intl-bundle": "dev-master",
+    "sonata-project/cache-bundle": "dev-master",
+    "knplabs/knp-menu-bundle": "2.0.*",
+    "sonata-project/exporter": "1.*",
+    "sonata-project/block-bundle": "dev-master",
+    "sonata-project/doctrine-orm-admin-bundle": "dev-master",
+    "sonata-project/admin-bundle": "dev-master",
+    "sonata-project/core-bundle": "dev-master",
+    "friendsofsymfony/user-bundle": "~2.0@dev",
+    "google/apiclient": "1.1.*@dev"
+  },
+  "require-dev": {
+    "sensio/generator-bundle": "~2.3"
+  },
+  "scripts": {
+    "post-install-cmd": [
+      "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
+      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
+      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
+      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
+      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
+      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::prepareDeploymentTarget"
+    ],
+    "post-update-cmd": [
+      "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
+      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
+      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
+      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
+      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
+      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::prepareDeploymentTarget"
+    ]
+  },
+  "repositories": [
+    {
+      "type": "composer",
+      "url": "http://packages.zendframework.com/"
     }
+  ],
+  "config": {
+    "bin-dir": "bin"
+  },
+  "extra": {
+    "symfony-app-dir": "app",
+    "symfony-web-dir": "web",
+    "symfony-assets-install": "symlink",
+    "incenteev-parameters": {
+      "file": "app/config/parameters.yml"
+    }
+  }
 }
