--- a/composer.json
+++ b/composer.json
@@ -28,18 +28,18 @@
     "jms/security-extra-bundle": "1.5.*",
     "jms/di-extra-bundle": "1.4.*",
     "kriswallsmith/assetic": "1.1.*@dev",
-    "dms/dms-filter-bundle": "dev-master",
-    "avalanche123/imagine-bundle": "dev-master",
-    "sonata-project/intl-bundle": "dev-master",
-    "sonata-project/cache-bundle": "dev-master",
     "knplabs/knp-menu-bundle": "2.0.*",
-    "sonata-project/exporter": "1.*",
-    "sonata-project/block-bundle": "dev-master",
-    "sonata-project/doctrine-orm-admin-bundle": "dev-master",
-    "sonata-project/admin-bundle": "dev-master",
-    "sonata-project/core-bundle": "dev-master",
     "friendsofsymfony/user-bundle": "~2.0@dev",
-    "google/apiclient": "1.1.*@dev"
+    "google/apiclient": "1.1.*@dev",
+    "avalanche123/imagine-bundle": "^2.1",
+    "dms/dms-filter-bundle": "^2.0",
+    "sonata-project/admin-bundle": "^2.3",
+    "sonata-project/core-bundle": "^2.3",
+    "sonata-project/exporter": "1.*",
+    "sonata-project/block-bundle": "^2.3",
+    "sonata-project/doctrine-orm-admin-bundle": "^2.3",
+    "sonata-project/intl-bundle": "^2.2",
+    "sonata-project/cache-bundle": "^2.2"
   },
   "require-dev": {
     "sensio/generator-bundle": "~2.3"
