--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,9 @@
   },
   "require": {
     "php": ">=5.3.9",
-    "symfony/symfony": "2.7.*",
+    "symfony/symfony": "2.7.*@stable",
     "doctrine/orm": "^2.4.8",
-    "doctrine/dbal": "<2.5",
+    "doctrine/dbal": "^2.5",
     "doctrine/doctrine-bundle": "~1.4",
     "symfony/assetic-bundle": "~2.3",
     "symfony/swiftmailer-bundle": "~2.3",
