--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,15 @@
 language: php
-sudo: false
-
 php:
   - '5.5'
   - '5.6'
   - '7.0'
 
-before_install:
-  - cp app/config/parameters.yml.travis app/config/parameters.yml
-  - composer self-update
-
-install:
-  - composer install -o
+before_script:
+#  - cp app/config/parameters.yml.travis app/config/parameters.yml
+  - composer install
   - php app/console doctrine:database:create --env=test
   - php app/console doctrine:schema:create --env=test
+#  - php app/console doctrine:fixtures:load -n --env=test
 
 script:
   - phpunit -c app
