--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,19 @@
 language: php
+sudo: false
+
 php:
   - '5.5'
   - '5.6'
   - '7.0'
 
-before_script:
+before_install:
   - cp app/config/parameters.yml.travis app/config/parameters.yml
-  - composer install
+  - composer self-update
+
+install:
+  - composer install -o
   - php app/console doctrine:database:create --env=test
   - php app/console doctrine:schema:create --env=test
-#  - php app/console doctrine:fixtures:load -n --env=test
 
 script:
   - phpunit -c app
