--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -24,7 +24,7 @@ sonata_block:
 
 sonata_admin:
     title:      AML87
-    title_logo: /bundles/amlweb/images/logo_aml87.png
+    title_logo: /bundles/amlweb/images/logo_aml87_black.png
     templates:
         # default global templates
         #layout:  AmlAdminBundle::standard_layout.html.twig
@@ -151,6 +151,9 @@ services:
         class: Aml\Bundle\WebBundle\Twig\SubstringExtension
         tags:
           - { name: twig.extension }
+
+    fos_user.doctrine_registry:
+        alias: doctrine
 
 avalanche_imagine:
     web_root:     "%kernel.root_dir%/../web"
