--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -12,3 +12,16 @@ web_profiler:
 
 swiftmailer:
     disable_delivery: true
+
+doctrine:
+    dbal:
+        driver: pdo_sqlite
+        host: localhost
+        port: ~
+        dbname: aml87_test
+        user: root
+        password: ~
+        path: %kernel.root_dir%/cache/database.db
+        charset: UTF8
+        memory: true
+
