--- a/composer.json
+++ b/composer.json
@@ -27,20 +27,20 @@
     "incenteev/composer-parameter-handler": "~2.0",
     "twig/extensions": "^1.3",
     "jms/security-extra-bundle": "1.5.*",
-    "jms/di-extra-bundle": "1.4.*",
+    "jms/di-extra-bundle": "1.7.*",
     "kriswallsmith/assetic": "1.1.*@dev",
     "knplabs/knp-menu-bundle": "2.1.1",
     "friendsofsymfony/user-bundle": "~2.0@dev",
     "google/apiclient": "1.1.*@dev",
     "avalanche123/imagine-bundle": "^2.1",
     "dms/dms-filter-bundle": "^2.0",
-    "sonata-project/core-bundle": "^2.3",
-    "sonata-project/exporter": "1.*",
-    "sonata-project/block-bundle": "^2.3",
-    "sonata-project/doctrine-orm-admin-bundle": "^2.3",
+    "sonata-project/doctrine-orm-admin-bundle": "^3.0",
     "sonata-project/intl-bundle": "^2.2",
-    "sonata-project/cache-bundle": "^2.2",
-    "sonata-project/admin-bundle": "^2.3"
+    "sonata-project/core-bundle": "^3.0",
+    "sonata-project/cache": "^1.0",
+    "sonata-project/block-bundle": "^3.0",
+    "sonata-project/exporter": "^1.4",
+    "sonata-project/admin-bundle": "^3.1"
   },
   "require-dev": {
     "sensio/generator-bundle": "~2.3"
