--- a/src/Aml/Bundle/AdminBundle/Resources/config/services.yml
+++ b/src/Aml/Bundle/AdminBundle/Resources/config/services.yml
@@ -8,9 +8,9 @@ services:
    aml_admin_bundle.image_type_extension:
           class: Aml\Bundle\AdminBundle\Form\Extension\ImageTypeExtension
           tags:
-              - { name: form.type_extension, alias: file }
+              - { name: form.type_extension, extended_type: Symfony\Component\Form\Extension\Core\Type\FileType }
 
    aml_admin_bundle.wysiwyg_type_extension:
           class: Aml\Bundle\AdminBundle\Form\Extension\WysiwygTypeExtension
           tags:
-              - { name: form.type_extension, alias: textarea }
+              - { name: form.type_extension, extended_type: Symfony\Component\Form\Extension\Core\Type\TextareaType }
