--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -55,10 +55,13 @@ aml_users:
 #login_check:
 #    path:   /login_check
     
-_imagine:
-    host:     medias.aml87.fr
-    resource: .
-    type:     imagine
+#_imagine:
+#    host:     medias.aml87.fr
+#    resource: .
+#     type:     imagine
+
+_liip_imagine:
+    resource: "@LiipImagineBundle/Resources/config/routing.xml"
 
 admin_sonata:
     resource: '@SonataAdminBundle/Resources/config/routing/sonata_admin.xml'
