--- a/src/Aml/Bundle/UsersBundle/Resources/config/services.yml
+++ b/src/Aml/Bundle/UsersBundle/Resources/config/services.yml
@@ -1,5 +1,5 @@
 services:
-    aml_users.form.profile:
-         class: Aml\Bundle\UsersBundle\Form\Type\ProfileFormType
-         tags:
-             - { name: form.type, alias: aml_user_profile }
+#    aml_users.form.profile:
+#         class: Aml\Bundle\UsersBundle\Form\Type\ProfileFormType
+#         tags:
+#             - { name: form.type, alias: aml_user_profile }
