--- a/src/Aml/Bundle/WebBundle/Resources/config/services.yml
+++ b/src/Aml/Bundle/WebBundle/Resources/config/services.yml
@@ -5,17 +5,17 @@ services:
 
     app.main_menu:
         class: Knp\Menu\MenuItem # the service definition requires setting the class
-        factory: [@app.menu_builder, createMainMenu]
-        arguments: ["@request"]
-        scope: request
+        factory: ["@app.menu_builder", createMainMenu]
+        arguments: ["@request_stack"]
+        #scope: request
         tags:
             - { name: knp_menu.menu, alias: main } # The alias is what is used to retrieve the menu
 
     app.breadcrumb_menu:
         class: Knp\Menu\MenuItem
-        factory: [@app.menu_builder, createBreadcrumbMenu]
-        arguments: ["@request"]
-        scope: request
+        factory: ["@app.menu_builder", createBreadcrumbMenu]
+        arguments: ["@request_stack"]
+        #scope: request
         tags:
             - { name: knp_menu.menu, alias: breadcrumb } # The alias is used in the template
 
