--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -167,6 +167,9 @@ fos_user:
     db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
     firewall_name: main
     user_class: Aml\Bundle\UsersBundle\Entity\User
+    from_email:
+      address:        noreply@aml87.fr
+      sender_name:    "%site_name%"
     #profile:
      #   form:
       #      type: aml_user_profile
