--- a/composer.json
+++ b/composer.json
@@ -56,7 +56,8 @@
   },
   "require-dev": {
     "sensio/generator-bundle": "^3.0",
-    "symfony/phpunit-bridge": "^3.0"
+    "symfony/phpunit-bridge": "^3.0",
+    "phpunit/phpunit": "~6.0"
   },
   "scripts": {
     "post-install-cmd": [
