--- a/src/Aml/Bundle/ContactUsBundle/Resources/config/services.yml
+++ b/src/Aml/Bundle/ContactUsBundle/Resources/config/services.yml
@@ -1,5 +1,5 @@
 parameters:
-    aml_contact_us.subriber: "%admin_email%"
+    aml_contact_us.subribers: "%admin_email%"
 
 services:
     sonata.block.service.contact_us_messages:
@@ -13,11 +13,9 @@ services:
 
     aml_contactus.message.post:
           class: Aml\Bundle\ContactUsBundle\EventListener\PostListener
-          arguments:
-              mailer: "@mailer"
-              container: "@service_container"
           tags:
               - { name: kernel.event_listener, event: aml_contactus.message.post_sent, method: onPostEvent }
+          arguments: ['@mailer', '@doctrine.orm.entity_manager', '%aml_contact_us.subribers%']
 
     aml_contactus.sitemap.generate:
           class: Aml\Bundle\ContactUsBundle\EventListener\SitemapListener
@@ -25,3 +23,8 @@ services:
               container: "@service_container"
           tags:
               - { name: kernel.event_listener, event: aml_web.sitemap.generate_start, method: onGenerateSitemapEvent }
+
+    aml_contactus.contact.contact_message:
+        class: Aml\Bundle\ContactUsBundle\Contact\ContactMessage
+        arguments: ['@doctrine.orm.entity_manager', '@mailer','@event_dispatcher']
+
