--- a/composer.json
+++ b/composer.json
@@ -21,14 +21,15 @@
   },
   "require": {
     "php": ">=5.5.9",
-    "symfony/symfony": "3.1.*",
-    "symfony/swiftmailer-bundle": "^2.3",
-    "symfony/monolog-bundle": "^2.11",
+    "symfony/symfony": "3.2.*",
+    "symfony/swiftmailer-bundle": "^2.3.10",
+    "symfony/monolog-bundle": "^3.0.2",
     "symfony/dependency-injection": "^3.1",
     "symfony/framework-bundle": "^3.1",
     "symfony/assetic-bundle": "^2.8",
     "symfony/security-bundle": "^3.0",
     "symfony/security-acl": "^3.0",
+    "symfony/polyfill-apcu": "^1.0",
     "doctrine/dbal": "^2.5",
     "doctrine/orm": "^2.5",
     "doctrine/doctrine-bundle": "^1.6",
@@ -37,7 +38,7 @@
     "sensio/framework-extra-bundle": "^3.0.2",
     "incenteev/composer-parameter-handler": "~2.0",
     "kriswallsmith/assetic": "^1.3",
-    "friendsofsymfony/user-bundle": "~2.0@dev",
+    "friendsofsymfony/user-bundle": "^2.0",
     "google/apiclient": "1.1.*@dev",
     "dms/dms-filter-bundle": "^2.0",
     "sonata-project/doctrine-orm-admin-bundle": "^3.0",
@@ -50,13 +51,12 @@
     "jms/serializer": "^1.3",
     "knplabs/knp-menu": "^2.1",
     "knplabs/knp-menu-bundle": "^2.1",
-    "twig/extensions": "^1.3",
-    "twig/twig": "^1.24",
+    "twig/twig": "^1.0||^2.0",
     "liip/imagine-bundle": "^1.6"
   },
   "require-dev": {
     "sensio/generator-bundle": "^3.0",
-    "symfony/phpunit-bridge": "^3.0",
+    "symfony/phpunit-bridge": "^3.2",
     "phpunit/phpunit": "~6.0"
   },
   "scripts": {
