Refacto | fix tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,12 @@ sudo: false
 
 php:
   - '7.0'
+  - '7.1'
 
 before_install:
   - echo "memory_limit=-1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
   - cp app/config/parameters.yml.travis app/config/parameters.yml
-  - composer require --dev --no-update phpunit/phpunit 5.7.5
+  - composer require --dev --no-update phpunit/phpunit 6.1.2
   - composer self-update
 
 install:
@@ -17,7 +18,7 @@ install:
   - php bin/console doctrine:schema:update --force --env=test
 
 script:
-  - phpunit
+  - vendor/bin/simple-phpunit
 
 notifications:
   email:
