--- a/src/Aml/Bundle/BlogBundle/Resources/config/services.yml
+++ b/src/Aml/Bundle/BlogBundle/Resources/config/services.yml
@@ -2,6 +2,7 @@ services:
     aml_blog.sitemap.generate:
         class: Aml\Bundle\BlogBundle\EventListener\SitemapListener
         arguments:
-            container: "@service_container"
+            - '@doctrine.orm.entity_manager'
+            - '@router'
         tags:
             - { name: kernel.event_listener, event: aml_web.sitemap.generate_start, method: onGenerateSitemapEvent }
