--- a/src/Aml/Bundle/DiscographyBundle/Resources/config/services.yml
+++ b/src/Aml/Bundle/DiscographyBundle/Resources/config/services.yml
@@ -2,13 +2,11 @@ parameters:
 #    aml_discography.example.class: Aml\Bundle\DiscographyBundle\Example
 
 services:
-#    aml_discography.example:
-#        class: %aml_discography.example.class%
-#        arguments: [@service_id, "plain_value", %parameter%]
     aml_discography.sitemap.generate:
         class: Aml\Bundle\DiscographyBundle\EventListener\SitemapListener
         arguments:
-            container: "@service_container"
+            - '@doctrine.orm.entity_manager'
+            - '@router'
         tags:
             - { name: kernel.event_listener, event: aml_web.sitemap.generate_start, method: onGenerateSitemapEvent }
 
