--- a/src/Tools/Bundle/YoutubeApiBundle/Resources/config/services.yml
+++ b/src/Tools/Bundle/YoutubeApiBundle/Resources/config/services.yml
@@ -2,11 +2,9 @@ parameters:
 #    tools_youtube_api.example.class: Tools\Bundle\YoutubeApiBundle\Example
 
 services:
-#    tools_youtube_api.example:
-#        class: %tools_youtube_api.example.class%
-#        arguments: [@service_id, "plain_value", %parameter%]
     tools_youtube_api.init_client:
          class: Tools\Bundle\YoutubeApiBundle\Api\Youtube
          arguments:
-            - "@service_container"
+            - "%google_app_name%"
+            - "%google_developer_key%"
 
