--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -2,7 +2,7 @@
 # http://symfony.com/doc/current/book/service_container.html
 parameters:
 #    parameter_name: value
-
+    app_google_analytics.account_id: "%ga_account_id%"
 services:
 #    service_name:
 #        class: AppBundle\Directory\ClassName
