--- a/src/Aml/Bundle/MediasBundle/Resources/config/services.yml
+++ b/src/Aml/Bundle/MediasBundle/Resources/config/services.yml
@@ -2,6 +2,9 @@ parameters:
 #    aml_medias.example.class: Aml\Bundle\MediasBundle\Example
 
 services:
-#    aml_medias.example:
-#        class: %aml_medias.example.class%
-#        arguments: [@service_id, "plain_value", %parameter%]
+    aml_medias.google.client:
+        class: Aml\Bundle\MediasBundle\Google\Client
+        arguments:
+          - '@logger'
+          - '%google_app_name%'
+          - '%google_developer_key%'
