Youtube | create youtube provider
Refactoriation:
	- Create a Youtube provider
	- Move command update to MediasBundle
	- Remove dir Tools and Bundle YoutubeApiBundle
	- composer.json: update "google/apiclient" 1.1 => 2.1

--- a/src/Aml/Bundle/MediasBundle/Resources/config/services.yml
+++ b/src/Aml/Bundle/MediasBundle/Resources/config/services.yml
@@ -9,6 +9,12 @@ services:
           - '%google_app_name%'
           - '%google_developer_key%'
 
+    aml_medias.google.youtube_provider:
+        class: Aml\Bundle\MediasBundle\Google\YoutubeProvider
+        arguments:
+          - '@aml_medias.google.client'
+          - '%youtube_username%'
+
     aml_medias.video.video_manager:
         class: Aml\Bundle\MediasBundle\Video\VideoManager
         arguments:
