--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
     "incenteev/composer-parameter-handler": "~2.0",
     "kriswallsmith/assetic": "^1.3",
     "friendsofsymfony/user-bundle": "^2.0",
-    "google/apiclient": "1.1.*@dev",
+    "google/apiclient": "^2.1",
     "dms/dms-filter-bundle": "^2.0",
     "sonata-project/doctrine-orm-admin-bundle": "^3.1",
     "sonata-project/intl-bundle": "^2.3",
