Sentry | Install and config sentry

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -284,3 +284,7 @@ liip_imagine:
              quality: 75
              filters:
                    relative_resize: {  widen: 900, mode: outbound }
+
+## Sentry
+sentry:
+    dsn: "%sentry_dsn%"
