--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -28,6 +28,9 @@ parameters:
     # Youtube Username
     youtube_username: ~
 
+    # Sentry
+    sentry_dsn: ~
+
 twig:
     globals:      
         project_name: AML87
