--- a/composer.json
+++ b/composer.json
@@ -53,7 +53,8 @@
     "knplabs/knp-menu-bundle": "^2.1",
     "twig/twig": "^1.0||^2.0",
     "liip/imagine-bundle": "^1.6",
-    "egeloen/ckeditor-bundle": "^5.0"
+    "egeloen/ckeditor-bundle": "^5.0",
+    "sentry/sentry-symfony": "^0.7.1"
   },
   "require-dev": {
     "sensio/generator-bundle": "^3.0",
